--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
-    "multer": "^2.0.1",
-    "dotenv": "^16.3.1"
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
